--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,3 +1,3 @@
-title=Basic Template
-appTitle=Basic Template
-appDescription=Blank app as starting point for your app development
+title=Watch Movies
+appTitle=Watch Movies
+appDescription=Find your favorite movie showtime
